# mini_projet

./: CMakeLists.txt  ClientRest.cpp  ClientRest.h  Fenetre.cpp  Fenetre.h  Modele.cpp  Modele.h  Utilisateur.cpp  Utilisateur.h  main.cpp  presenter.cpp  presenter.h
Model/: Model.cpp  Model.h  Modele.cpp  Modele.h  RecupDonnees.cpp  RecupDonnees.h
ModeleEtClient/: ClientRest.cpp  ClientRest.h  Modele.cpp  Modele.h
Rest/: RecupDonnees.cpp  RecupDonnees.h
model/: Datas.cpp  Datas.h
rest/: ClientRest.cpp  ClientRest.h
settings/: settings.cpp  settings.h
